# webposto-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-stack-build.yml  docker-stack-traefik-v2.yml  docker-stack.yml  fastmcp.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aws/: template.v2.yaml  template.yaml
docs/: DEPLOY_AWS.md  DEPLOY_PORTAINER.md  GUIA_USO_APIS.md  LAMBDA_HANDLER_IMPLEMENTATION.md  mapeamento_dependencias_apis.md  prompt_agente_webposto.md
scripts/: start_server.ps1  start_server.sh
src/: config.py  lambda_handler.py  lambda_handler.v2.py  main.py  resources_prompts.py  server.py  server_http.py
src/api/: webposto_client.py
src/tools/: abastecimento_tools.py  caixa_tools.py  estoque_tools.py
tests/: test_smoke.py
